--- a/workspace/lamu/build.xml
+++ b/workspace/lamu/build.xml
@@ -5,10 +5,12 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="lamu">
     <property environment="env"/>
+    <property name="workspace_loc:lamu" value="."/>
     <property name="lib.location" value="../lib"/>
     <property name="kawapad.location" value="../kawapad"/>
     <property name="metro.location" value="../metro"/>
     <property name="pulsar.location" value="../pulsar"/>
+    <property name="pulsar-gui.location" value="../pulsar-gui"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
@@ -18,7 +20,6 @@
         <pathelement location="${lib.location}/lib/jna-platform-4.5.0.jar"/>
         <pathelement location="${lib.location}/lib/jnajack-1.3.0.jar"/>
         <pathelement location="${lib.location}/lib/kawa.jar"/>
-        <pathelement location="${lib.location}/lib/JTattoo-1.6.11.jar"/>
     </path>
     <path id="kawapad.classpath">
         <pathelement location="${kawapad.location}/bin"/>
@@ -34,12 +35,18 @@
         <path refid="metro.classpath"/>
         <path refid="kawapad.classpath"/>
     </path>
+    <path id="pulsar-gui.classpath">
+        <pathelement location="${pulsar-gui.location}/bin"/>
+        <path refid="lib.classpath"/>
+        <path refid="kawapad.classpath"/>
+    </path>
     <path id="lamu.classpath">
         <pathelement location="bin"/>
         <path refid="lib.classpath"/>
         <path refid="kawapad.classpath"/>
         <path refid="metro.classpath"/>
         <path refid="pulsar.classpath"/>
+        <path refid="pulsar-gui.classpath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -58,6 +65,7 @@
         <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${pulsar-gui.location}" inheritAll="false" target="clean"/>
     </target>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects">
@@ -65,6 +73,7 @@
         <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${metro.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${pulsar-gui.location}" inheritAll="false" target="build-project"/>
     </target>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
@@ -74,4 +83,85 @@
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target name="LamuApplication (2-4)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="-e /home/ats/repo/works/revising/lambda-music/quasijazzer/song.lamu"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (6)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="advanced create scheme + pulsar + kawapad /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm +"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (1)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <arg line="advanced begin exec scheme + kawapad + end begin fork exec  scheme + pulsar + httpd + end"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (4)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="advanced&#10;begin&#10;&#9;fork  lamu advanced create  scheme + pulsar + stdio-stream + repl&#10;end&#10;begin &#10;&#9;create forked-stream + logger-stream --in=stdin.log --out=stdout.log --err=stderr.log&#10;end&#10;begin&#10;&#9;create  scheme --stream + kawapad + stdio-stream + repl&#10;end"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="/home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (2)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="/home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (7)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="advanced create scheme + repl"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (5)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer" failonerror="true" fork="yes">
+            <env key="LAMU_LOGGING_PROPERTIES" value="${workspace_loc:lamu}/logging.properties"/>
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="advanced load /home/ats/repo/works/revising/lambda-music/quasijazzer/song.lamu  /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm  --foo=aaa --bar=asasa"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (2-2)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <arg line="--command=load /home/ats/repo/works/revising/lambda-music/quasijazzer/song.lamu"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (2-1)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <arg line="--command=open /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (2-3)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <arg line="--load=/home/ats/repo/works/revising/lambda-music/quasijazzer/song.lamu  /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
+    <target name="LamuApplication (3)">
+        <java classname="lamu.LamuApplication" dir="../../../../../../../../../../../../home/ats/repo/works/revising/lambda-music/quasijazzer/" failonerror="true" fork="yes">
+            <jvmarg line="-Djava.util.logging.config.file=${workspace_loc:lamu}/logging.properties"/>
+            <arg line="advanced create scheme + pulsar + stdio-stream + repl + gui /home/ats/repo/works/revising/lambda-music/quasijazzer/song.scm +"/>
+            <classpath refid="lamu.classpath"/>
+        </java>
+    </target>
 </project>
