--- a/workspace/metro/build.xml
+++ b/workspace/metro/build.xml
@@ -17,7 +17,6 @@
         <pathelement location="${lib.location}/lib/jna-platform-4.5.0.jar"/>
         <pathelement location="${lib.location}/lib/jnajack-1.3.0.jar"/>
         <pathelement location="${lib.location}/lib/kawa.jar"/>
-        <pathelement location="${lib.location}/lib/JTattoo-1.6.11.jar"/>
     </path>
     <path id="metro.classpath">
         <pathelement location="bin"/>
@@ -54,5 +53,10 @@
         <ant antfile="build.xml" dir="${lamu.location}" inheritAll="false" target="build"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${pulsar.location}" inheritAll="false" target="build"/>
+    </target>
+    <target name="MetroSequenceDirectFilter">
+        <java classname="metro.MetroSequenceDirectFilter" failonerror="true" fork="yes">
+            <classpath refid="metro.classpath"/>
+        </java>
     </target>
 </project>
