--- a/workspace/pulsar-gui/.classpath
+++ b/workspace/pulsar-gui/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src.gui"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
-	<classpathentry kind="src" path="src.scheme"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
