--- a/workspace/lib/.classpath
+++ b/workspace/lib/.classpath
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="src.scheme-evaluators"/>
+	<classpathentry kind="src" path="src.evaluators"/>
 	<classpathentry kind="src" path="src.app"/>
 	<classpathentry kind="src" path="src.scheme"/>
 	<classpathentry kind="src" path="src.help"/>
-	<classpathentry kind="src" path="src.action-help"/>
+	<classpathentry kind="src" path="src.action"/>
 	<classpathentry kind="src" path="src.gui-utils"/>
-	<classpathentry kind="src" path="src.thread-initializers"/>
-	<classpathentry kind="src" path="src.thread-current"/>
-	<classpathentry kind="src" path="src.securetary"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-4.5.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jnajack-1.3.0.jar" sourcepath="src.archive/jnajack-1.3.0.zip"/>
