--- a/workspace/lib/.classpath
+++ b/workspace/lib/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="src.evaluators"/>
 	<classpathentry kind="src" path="src.args"/>
 	<classpathentry kind="src" path="src.help"/>
+	<classpathentry kind="src" path="src.procs"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/kawa.jar"/>
 	<classpathentry kind="output" path="bin"/>
