--- a/workspace/lib/build.xml
+++ b/workspace/lib/build.xml
@@ -44,6 +44,12 @@
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src.procs">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
     </target>
     <target name="clean">
         <delete dir="bin"/>
@@ -58,6 +64,7 @@
             <src path="src.evaluators"/>
             <src path="src.args"/>
             <src path="src.help"/>
+            <src path="src.procs"/>
             <classpath refid="lib.classpath"/>
         </javac>
     </target>
