[recompiled] reorganized the projects

--- a/workspace/kawapad/.classpath
+++ b/workspace/kawapad/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
 	<classpathentry kind="src" path="src.action"/>
 	<classpathentry kind="src" path="src.gui-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
