--- a/workspace/lamu/.classpath
+++ b/workspace/lamu/.classpath
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/lib"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/kawapad"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/metro"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/pulsar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/kawapad"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-kawautils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-lamu"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-loggerutils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/metro"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pulsar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pulsar-gui"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
