--- a/workspace/metro/build.xml
+++ b/workspace/metro/build.xml
@@ -7,20 +7,24 @@
     <property environment="env"/>
     <property name="lamu.location" value="../lamu"/>
     <property name="pulsar.location" value="../pulsar"/>
-    <property name="lib.location" value="../lib"/>
+    <property name="lib-lamu.location" value="../lib-lamu"/>
+    <property name="lib-loggerutils.location" value="../lib-loggerutils"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
-    <path id="lib.classpath">
-        <pathelement location="${lib.location}/bin"/>
-        <pathelement location="${lib.location}/lib/kawa.jar"/>
+    <path id="lib-loggerutils.classpath">
+        <pathelement location="${lib-loggerutils.location}/bin"/>
+    </path>
+    <path id="lib-lamu.classpath">
+        <pathelement location="${lib-lamu.location}/bin"/>
     </path>
     <path id="metro.classpath">
         <pathelement location="bin"/>
-        <path refid="lib.classpath"/>
         <pathelement location="lib/jna-4.5.0.jar"/>
         <pathelement location="lib/jna-platform-4.5.0.jar"/>
         <pathelement location="lib/jnajack-1.3.0.jar"/>
+        <path refid="lib-loggerutils.classpath"/>
+        <path refid="lib-lamu.classpath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -34,11 +38,13 @@
         <delete dir="bin"/>
     </target>
     <target depends="clean" name="cleanall">
-        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="clean"/>
     </target>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects">
-        <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="build-project"/>
     </target>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
