--- a/workspace/pulsar-gui/build.xml
+++ b/workspace/pulsar-gui/build.xml
@@ -6,23 +6,47 @@
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="pulsar-gui">
     <property environment="env"/>
     <property name="lamu.location" value="../lamu"/>
+    <property name="lib-lamu.location" value="../lib-lamu"/>
+    <property name="lib-loggerutils.location" value="../lib-loggerutils"/>
+    <property name="lib-kawautils.location" value="../lib-kawautils"/>
     <property name="lib.location" value="../lib"/>
     <property name="kawapad.location" value="../kawapad"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
+    <path id="lib-lamu.classpath">
+        <pathelement location="${lib-lamu.location}/bin"/>
+    </path>
+    <path id="lib-loggerutils.classpath">
+        <pathelement location="${lib-loggerutils.location}/bin"/>
+    </path>
+    <path id="lib-kawautils.classpath">
+        <pathelement location="${lib-kawautils.location}/bin"/>
+        <pathelement location="${lib-kawautils.location}/lib/kawa.jar"/>
+        <path refid="lib-lamu.classpath"/>
+        <path refid="lib-loggerutils.classpath"/>
+    </path>
     <path id="lib.classpath">
         <pathelement location="${lib.location}/bin"/>
-        <pathelement location="${lib.location}/lib/kawa.jar"/>
+        <path refid="lib-kawautils.classpath"/>
+        <path refid="lib-lamu.classpath"/>
+        <path refid="lib-loggerutils.classpath"/>
     </path>
     <path id="kawapad.classpath">
         <pathelement location="${kawapad.location}/bin"/>
+        <pathelement location="${kawapad.location}/kawapad.jar"/>
         <path refid="lib.classpath"/>
+        <path refid="lib-kawautils.classpath"/>
+        <path refid="lib-lamu.classpath"/>
+        <path refid="lib-loggerutils.classpath"/>
     </path>
     <path id="pulsar-gui.classpath">
         <pathelement location="bin"/>
-        <path refid="lib.classpath"/>
         <path refid="kawapad.classpath"/>
+        <path refid="lib-lamu.classpath"/>
+        <path refid="lib-loggerutils.classpath"/>
+        <path refid="lib.classpath"/>
+        <path refid="lib-kawautils.classpath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -36,11 +60,17 @@
         <delete dir="bin"/>
     </target>
     <target depends="clean" name="cleanall">
+        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="clean"/>
+        <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="clean"/>
         <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="clean"/>
     </target>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects">
+        <ant antfile="build.xml" dir="${lib-lamu.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${lib-loggerutils.location}" inheritAll="false" target="build-project"/>
+        <ant antfile="build.xml" dir="${lib-kawautils.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${lib.location}" inheritAll="false" target="build-project"/>
         <ant antfile="build.xml" dir="${kawapad.location}" inheritAll="false" target="build-project"/>
     </target>
